In the html I have add a class to every cardSlot div container to make it easier to style in css. In CSS I have added flex box to the player1 and player2 sections to structure the cardSlots(child elements). In JS for the time being I have selected the p1Avater to be later used for player to draw a card and I have selected p1CardSlot(s). I created an array to hold card images and images have been added to the array using a for loop. To test if the p1CardSlot(s) have been properly selected and the array having 54 card images I have appended array index 0, 25, 40 and 53(the last element) and no issues were found. Next thing to do is add an event listener, create functions and randomize a card draw.

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,10 @@ body {
      width: 100%;
      border: 5px solid black;
      box-sizing: border-box;
+     display: flex;
+     justify-content: space-between;
+     padding-left: 20px;
+     padding-right: 20px;
 }
 /* PLAYER 1 SECTION END */
 
@@ -44,5 +48,31 @@ body {
      width: 100%;
      border: 5px solid black;
      box-sizing: border-box;
+     display: flex;
+     justify-content: space-between;
+     padding-left: 20px;
+     padding-right: 20px;
+
 }
 /* PLAYER 1 SECTION END */
+
+
+
+.cardSlot {
+     background-color: lightgrey;
+     height: 250px;
+     width: 150px;
+}
+
+.cardImg {
+     background-color: transparent;
+     height: auto;
+     width: 100%;
+     
+}
+
+.avatar {
+     background-color: aquamarine;
+     height: 250px;
+     width: 150px;
+}
